# GE-Phantom

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: servers.json
data/: apply_test_log.json  autoattack_dummy.json  autoattack_no_monster.json  c2s_actions.json  char_struct_dump.txt  combat_capture.json  entity_combat_info_analysis.md  items.json  login_capture.json  phase2b_conclusion.json  phase2b_results.json  range_addresses.json  struct_diff.txt
docs/: protocol.md
src/bot/: __init__.py  controller.py  input.py  main.py  memory.py  (+1 more)
tests/: conftest.py  test_analyzer.py  test_capture.py  test_multiclient_live.py  test_packet_types.py  test_reassembly.py  test_replay.py  test_router.py  test_session.py  test_stream.py  test_zone.py
tools/: analyze.py  analyze_0x1400.py  analyze_5a0c.py  analyze_aigehs.py  analyze_c2s_encryption.py  analyze_dummy.py  analyze_effect_data.py  analyze_effect_data_v2.py  analyze_fields.py  analyze_framing.py  analyze_framing_v2.py  analyze_funcs.py  analyze_internal.py  analyze_prop_func.py  analyze_real_ge.py  analyze_real_ge_v2.py  analyze_remaining_unknowns.py  analyze_unknown_opcodes.py  analyze_variable_opcodes.py  analyze_xrefs.py  compare_rdata_strings.py  confirm_opcodes.py  dashboard.py  decode_590c.py  deep_gegeer_hooks.py  deep_gegeer_phase2.py  deep_gegeer_phase3.py  diagnose_range.py  dll_injector.py  find_strings.py  game_state_scan.py  item_radar.py  live_apply_test.py  live_test.py  live_test_phase2b.py  match_getpropnum.py  monitor.py  packet_logger.py  phantom_ui.py  phase1_analysis.py  (+18 more)
(+27 files in other folders)
